# kubiltics

./: .env.example  .gitattributes  .gitignore  .semgrepignore  CHANGELOG.md  Makefile  README.md  SimulationVisualSystem.jsx  Topology-v2-Design-Critique.docx  docker-bake.hcl  docker-compose.test.yml  go.work  go.work.sum
.claude/: launch.json
.github/: dependabot.yml
.semgrep/: kubilitics-rules.yml
docs/: BUILD-AND-RELEASE-GUIDE.md  DEPLOYMENT.md  PRD-METRICS.md  PRODUCTION_ENV_VARS.md  RELEASE-STANDARDS.md  SCORING-METHODOLOGY.md  incident-response-plan.md  operations-runbook.md  release-steps.md  resource-topology-executed.md  topology-enhancements-tasks.md
kcli/: go.mod
kubilitics-agent/: go.mod  go.sum
kubilitics-ai/: README.md
kubilitics-backend/: .dockerignore  API_DOCUMENTATION.md  Dockerfile  README.md  go.mod  go.sum
kubilitics-cli/: go.mod  go.sum
kubilitics-desktop/: package-lock.json  package.json
kubilitics-desktop/src-tauri/: Cargo.toml  tauri.conf.json
kubilitics-desktop/src-tauri/capabilities/: default.json
kubilitics-desktop/src-tauri/icons/: icon.icns
kubilitics-desktop/src-tauri/src/: backend_ports.rs  commands.rs  main.rs  sidecar.rs
kubilitics-frontend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
kubilitics-trace-agent/: .gitignore  Dockerfile  Dockerfile.demo  go.mod  go.sum
prd-unicorn/: PRD-00-KUBILITICS-MASTER-PLATFORM.docx  PRD-01-TOPOLOGY-ENGINE.docx  PRD-02-AI-INTELLIGENCE-ENGINE.docx  tasks-part1.md  (+11 more)
(+1233 files in other folders)
