[package]
name = "kubilitics-desktop"
version = "0.2.8"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# devtools omitted from release builds — never expose inspector to end users
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"

# Note: Tauri 2 gates the WKWebView inspector on Rust's built-in debug_assertions
# flag inside the Tauri crate. Do not add the 'devtools' Cargo feature to the base
# dependency above — the release build must never ship the inspector. A
# compile-time guard in src/main.rs makes this impossible to break by accident.

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Opt-in devtools feature. Enables the WebView inspector. Must NEVER be used
# in release builds — main.rs has a compile_error! guard that fails the build
# if this feature is enabled together with !debug_assertions.
devtools = ["tauri/devtools"]
